version/0.66/_sources/autoapi/pyedb/grpc/database/utility/sources/CircuitPort.rst.txt






:class:`CircuitPort`
====================


.. py:class:: pyedb.grpc.database.utility.sources.CircuitPort(pedb, impedance='50')

   Bases: :py:obj:`Source`


   
   Manages a circuit port.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CircuitPort

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~impedance`
            - Impedance.
          * - :py:attr:`~get_type`
            - Get type.







Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.utility.sources import CircuitPort

Property detail
---------------

.. py:property:: impedance

   
   Impedance.
















   ..
       !! processed by numpydoc !!

.. py:property:: get_type

   
   Get type.
















   ..
       !! processed by numpydoc !!






